hphp/hack/test/typecheck/unset_shape_idx.php.like_types.exp
File "unset_shape_idx.php", line 7, characters 3-20:
In strict mode, unset is banned except on dynamic, darray, keyset, or dict indexing (Typing[4135])
File "unset_shape_idx.php", line 4, characters 12-12:
This is a shape because it is an unenforceable type
